Remove unnecessary dependencies

--- a/src/main/webapp/jdbc.properties
+++ b/src/main/webapp/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://mydbinstance.cnnt7cbznmih.us-west-2.rds.amazonaws.com:5432/rems
-jdbc.username=postgres
-jdbc.password=elephant
+jdbc.url=DATABASE_URL_HERE
+jdbc.username=USERNAME_HERE
+jdbc.password=PASSWORD_HERE
